# LoyaltyToolor

./: .env.example  .gitignore  Dockerfile.web  README.md  deploy_iphone.sh  nginx.web.conf  pubspec.yaml  render.yaml  vercel.json
.omc/: project-memory.json
admin/: .env.vercel  Dockerfile  package-lock.json  package.json
backend/: Dockerfile  fly.toml  pyproject.toml  render.yaml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: c4e5f6g7h8i9_add_oauth_fields.py  d5f6g7h8i9j0_rename_tiers_to_kyrgyz.py  f571aabd609e_initial_schema.py
backend/alembic/versions/versions/: a2c3d4e5f6g7_add_finik_payment_fields.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  app_event.py  loyalty.py  order.py  user.py
backend/app/routers/: auth.py  cart.py  loyalty.py  orders.py  users.py  webhooks.py
backend/app/routers/admin/: analytics.py  orders.py  products.py  users.py
backend/app/schemas/: auth.py  order.py  user.py
backend/app/services/: ai_service.py  analytics_service.py  apple_auth_service.py  auth_service.py  event_logger.py  loyalty_service.py  order_service.py  sms_service.py
backend/seeds/: 001_initial_schema.sql  002_seed_categories.sql  003_seed_products.sql  004_seed_locations.sql
backend/tests/: conftest.py  test_auth.py  test_health.py  test_orders.py  test_products.py
docs/: FINIK_SETUP.md
fastlane/: Appfile  Fastfile
lib/: main.dart
linux/: CMakeLists.txt
supabase/: config.toml
test/: widget_test.dart
web/: index.html  (+1 more)
(+81 files in other folders)
